<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kalakal_color"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="152dp"
        android:layout_height="127dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kalakal_hand_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/banner"
        android:layout_width="222dp"
        android:layout_height="83dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/kalakal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="52sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/roboto"
        android:hint="@string/email_address"
        android:textColorHint="@color/gray"
        android:inputType="textEmailAddress"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <EditText
        android:id="@+id/rPassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:height="50dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="#DF5E88"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rPassword" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToRegister"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>