<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/kalakal_color"
        tools:context=".Register">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="152dp"
            android:layout_height="127dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/kalakal_hand_logo" />

        <TextView
            android:id="@+id/banner"
            android:layout_width="222dp"
            android:layout_height="83dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/kalakal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="52sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/roboto"
            android:hint="@string/full_name"
            android:textColorHint="@color/gray"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            android:autofillHints="" />

        <EditText
            android:id="@+id/address"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/input_shape"
            android:fontFamily="@font/roboto"
            android:hint="@string/address"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullname" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_address"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            android:autofillHints="" />

        <EditText
            android:id="@+id/rPassword"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_shape"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAddress"
            android:autofillHints="" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#DF5E88"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rPassword" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToLogin"
            android:text="@string/has_account"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>