<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clickable="false"
    app:cardBackgroundColor="#EEEDE7">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEDE7"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/pImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/pName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/product_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:ellipsize="end"
            android:maxLines="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/pDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/product_description"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="1"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>