<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProductContent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="65dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#EEEDE7"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/pImage"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/product_title"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/favorites"
                    android:layout_width="18dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="300dp"
                    android:src="@drawable/heart" />
            </RelativeLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/pDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/product_description"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <Button
                android:id="@+id/makeOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Make Offer"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:cornerRadius="8dp" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/chatUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chat User"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:cornerRadius="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/traderInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            app:layout_constraintTop_toBottomOf="@id/product_options">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trader's Information"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                android:textSize="21sp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toBottomOf="@id/traderInfo">

            <ImageView
                android:id="@+id/pTraderPhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="Profile Photo"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="120dp">

                <TextView
                    android:id="@+id/pTrader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Distance"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="See Profile"
                    android:textColor="@color/kalakal_color"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="18sp"/>
            </LinearLayout>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

